CRM-合同: 新增合同关联商品